Тут то же самое, что в ветке мастер (2 задания я сделал в одной ветке)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </header>
     <div class="section">
       <a href="#" class="menu-btn">
-        <span class="menu-btn__span"></span>
+        <span class="menu-btn__span">
+        </span>
       </a>
     </div>
     <div class="nav">
